--- a/about.html
+++ b/about.html
@@ -1,3 +1,11 @@
+---
+layout: page
+title: About - Gian Solo
+description: About Gian Solo
+---
+
+### ABOUT
+
 Over the years, I’ve built my reputation as an expert in music, arts and lifestyle trends. I provide great care in the work 
 that I do to help my patrons navigate through music information, unique arts and help curate their lifestyle. I am 100% 
 original and uphold my style, work quality and statement. I choose to work with investors, creators, companies, artists, 
