--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,13 @@ description: Frequently asked Questions about Gian Solo
 
 ### FAQ
 
+Why should I take lessons with you?
+
+How does Gian ensure or measure results for his students?
+
 What are your rates?
+
+How do I book Gian to teach me?
 
 How long are the sessions?
 
@@ -14,7 +20,11 @@ When do you teach?
 
 Where are the lessons held?
 
-Do you do in-home lessons?
+Do you offer a video curriculum?
+
+Do you do in-home lessons or group lessons?
+
+Will I learn the same things if I take Skype Lessons instead of in-person?
 
 What do I need?
 
