--- a/contact.html
+++ b/contact.html
@@ -57,3 +57,6 @@ image:
 		</div>
 	</form>
 </section>
+
+
+Please feel free to email <a href="mailto: giansolo@gmail.com">giansolo@gmail.com</a> for all inquiries.
