--- a/about.html
+++ b/about.html
@@ -2,10 +2,8 @@
 layout: page
 title: About
 description: About Gian Solo
+image: alxstlsunsplash.jpg
 ---
-
-### ABOUT
-
 Over the years, I’ve built my reputation as an expert in music, arts and lifestyle trends. I provide great care in the work 
 that I do to help my patrons navigate through music information, unique arts and help curate their lifestyle. I am 100% 
 original and uphold my style, work quality and statement. I choose to work with investors, creators, companies, artists, 
