--- a/about.html
+++ b/about.html
@@ -9,6 +9,6 @@ that I do to help my patrons navigate through music information, unique arts and
 original and uphold my style, work quality and statement. I choose to work with investors, creators, companies, artists, 
 brands, songwriters, bands, musicians, entrepreneurs, labels, consumers, buyers, visionaries, collaborators, customers and 
 others that pursue the same coaction vision of quality, value, and substance.
-
+<br /><br />
 For more info regarding For the Love of Guitars and the services I provide or for general inquiries, 
-email mphmusic@gmail.com
+<a href="mailto:mphmusic@gmail.com"> mphmusic@gmail.com</a>
