Update and rename guitarlessons.html to lessons.html

--- a/lessons.html
+++ b/lessons.html
@@ -4,13 +4,13 @@ title: Guitar Lessons
 description: Guitar Lessons by Gian Solo
 ---
 
-<h1>Lessons</h1>
+<h2>Lessons</h2>
 
 <h3>Beginner</h3>
-Intermediate
-Advanced
+<h3>Intermediate</h3>
+<h3>Advanced</h3>
 <h3>Skype</h3>
-<br /><br />
+<br />
 Skype Lessons allow you to get world class guitar instruction from the comfort of your own home. Here's what you need to get started:
 <br /><br />
 1) A computer with a webcam and an internet connection 
