--- a/about.html
+++ b/about.html
@@ -4,11 +4,13 @@ title: About
 description: About Gian Solo
 image: alxstlsunsplash.jpg
 ---
+<h6>ABOUT</h6>
+<br />
 Over the years, I’ve built my reputation as an expert in music, arts and lifestyle trends. I provide great care in the work 
 that I do to help my patrons navigate through music information, unique arts and help curate their lifestyle. I am 100% 
 original and uphold my style, work quality and statement. I choose to work with investors, creators, companies, artists, 
 brands, songwriters, bands, musicians, entrepreneurs, labels, consumers, buyers, visionaries, collaborators, customers and 
 others that pursue the same coaction vision of quality, value, and substance.
 <br /><br />
-For more info regarding For the Love of Guitars and the services I provide or for general inquiries, 
+For more info regarding the services I provide: 
 <a href="mailto:mphmusic@gmail.com"> mphmusic@gmail.com</a>
