--- a/faq.html
+++ b/faq.html
@@ -4,10 +4,10 @@ title: FAQ
 description: Frequently asked Questions about Gian Solo
 ---
 
-### FAQ
+<h3>FAQ</h3>
 
-Why should I take lessons with you?
-
+<h5>Why should I take lessons with you?</h5>
+<br />
 How does Gian ensure or measure results for his students?
 
 What are your rates?
