--- a/faq.html
+++ b/faq.html
@@ -8,34 +8,60 @@ description: Frequently asked Questions about Gian Solo
 
 <h5>Why should I take lessons with you?</h5>
 <br />
-How does Gian ensure or measure results for his students?
-
-What are your rates?
-
-How do I book Gian to teach me?
-
-How long are the sessions?
-
-When do you teach?
-
-Where are the lessons held?
-
-Do you offer a video curriculum?
-
-Do you do in-home lessons or group lessons?
-
-Will I learn the same things if I take Skype Lessons instead of in-person?
-
-What do I need?
-
-I have a unique schedule. Can we work around it?
-
-What is the age range?
-
-Do you offer gift certificates?
-
-How many lessons in a week?
-
-How long until I start to rock?
-
-What is your musical focus?
+For starters, I'm unconventional. I did not like the normal studies offered and have instead taken it upon myself to create a curriculum that suits the needs of eccentric individuals and eager learners. 
+<br />
+<h5>How does Gian ensure or measure results for his students?</h5>
+<br />
+<h5>What are your rates?</h5>
+<br />
+Rates vary,please inquiry through email or text.
+<br />
+<h5>How do I book Gian to teach me?</h5>
+<br />
+Please head to the <a href="">contact page</a> and get in touch with Gian
+<br />
+<h5>How long are the sessions?</h5>
+<br />
+Sessions last anywhere between 45 mins. to 1 hr.
+<br />
+<h5>When do you teach?</h5>
+<br />
+Depends on availability of student but I prefer Saturday & Sunday mornings.
+<br />
+<h5>Where are the lessons held?</h5>
+<br />
+I teach at my home. In my special mancave (garage) wannabe studio. You'll love it!
+<br />
+<h5>Do you offer a video curriculum?</h5>
+<br />
+Video curriculum/lessons coming soon. Stay tuned!
+<br />
+<h5>Do you do in-home lessons or group lessons?</h5>
+<br />
+I prefer to teach in the comfort of my home but I can def. consider different circumstances. Group lessons all good!
+<br />
+<h5>Will I learn the same things if I take Skype Lessons instead of in-person?</h5>
+<br />
+If you ask me, it really all depends on how the student wants to learn. We all learn in different ways. Location is also a huge factor in deciding whether the student wants to learn through Skype or in-person.
+<br />
+<h5>I have a unique schedule. Can we work around it?</h5>
+<br />
+As I mention above, I am def. willing to consider options. My main concern is the clarity of the lesson. Late nights, no rest, no sleep, or teaching at odd hours is not beneficial for anyone.
+<br />
+<h5>What is the age range?</h5>
+<br />
+10 and up.
+<br />
+<h5>Do you offer gift certificates?</h5>
+<br />
+Gift Certicates coming soon.
+<br />
+<h5>How many lessons in a week?</h5>
+<br />
+1 lesson per week.
+<br />
+<h5>How long until I start to rock?</h5>
+<br />
+Remember future rock star, Rome was not built overnight. Learning how to play guitar cannot be learned overnight. Practice always and never stop learning.
+<br />
+<h5>What is your musical focus?</h5>
