--- a/lessons.html
+++ b/lessons.html
@@ -6,6 +6,14 @@ description: Guitar Lessons by Gian Solo
 
 <h2>Lessons</h2>
 
+-Add Venmo, Paypal + Buttons + Drop Down prices
+-Add Bookafy Calendar
+-Add email
+-Parking Instructions
+-Payment Info
+-Refund/Cancellation Policy
+-Skype Info (PST)
+
 <h3>Beginner</h3>
 <h3>Intermediate</h3>
 <h3>Advanced</h3>
