--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ image:
 
 <section>
 	<h4>Form</h4>
-	<form method="post" action="#">
+	<form method="post" action="https://formspree.io/gtrsage@gmail.com">
 		<div class="row uniform">
 			<div class="6u 12u$(xsmall)">
 				<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
