--- a/lessons.html
+++ b/lessons.html
@@ -6,32 +6,26 @@ description: Guitar Lessons by Gian Solo
 
 <h2>Lessons</h2>
 
--Add Venmo, Paypal + Buttons + Drop Down prices
--Add Bookafy Calendar
--Add email
--Parking Instructions
--Payment Info
--Refund/Cancellation Policy
--Skype Info (PST)
+Whether you are a beginner or intermediate, I got you! My classes are built for people yearning to learn how to play guitar. 
 
-<h3>Beginner</h3>
-<h3>Intermediate</h3>
-<h3>Advanced</h3>
 <h3>Skype</h3>
 <br />
 Skype Lessons allow you to get world class guitar instruction from the comfort of your own home. Here's what you need to get started:
 <br /><br />
 1) A computer with a webcam and an internet connection 
 <br />
-2) Download the free Skype online video chat service here. Make sure to make an account! 
+2) Download the free Skype online video chat service <a href="https://www.skype.com/en/">here</a>. Make sure to make an account! 
 <br />
-3) Contact me via email or phone and set up your first lesson. Once we've arranged a lesson time, confirm your lesson time by purchasing your first lesson using the button to the right. 
+3) Contact me via email or phone and set up your first lesson. Once we've arranged a lesson time, confirm your lesson time by purchasing your first lesson using the button below. 
 <br />
-4) Sign on a few minutes before your lesson time and add me LessonsByDrew to your contact list 
+4) Sign on a few minutes before your lesson time and add me GianGuitar to your contact list 
 <br />
 5) Lesson time! The lesson proceeds like normal from here, all handouts, song pdfs and backing tracks will be emailed to you.
 <br /><br />
 <h3>Video Series</h3>
+<br />
+Video Lessons coming soon.
+<br />
 
 <h3>FAQ</h3>
 
@@ -79,3 +73,12 @@ Remember future rock star, Rome was not built overnight. Learning how to play gu
 <br /><br />
 <h5>What is your musical focus?</h5>
 I'm a rocker by heart but also focus on pop, metal, folk, punk, funk, soul, oldies, classic rock and much more.
+
+
+Note: -Add Venmo, Paypal + Buttons + Drop Down prices
+-Add Bookafy Calendar
+-Add email
+-Parking Instructions
+-Payment Info
+-Refund/Cancellation Policy
+-Skype Info (PST)
