--- a/lessons.html
+++ b/lessons.html
@@ -7,7 +7,7 @@ description: Guitar Lessons by Gian Solo
 <h2>Lessons</h2>
 
 Whether you are a beginner or intermediate, I got you! My classes are built for people yearning to learn how to play guitar. 
-
+<br />
 <h3>Skype</h3>
 <br />
 Skype Lessons allow you to get world class guitar instruction from the comfort of your own home. Here's what you need to get started:
@@ -21,6 +21,14 @@ Skype Lessons allow you to get world class guitar instruction from the comfort o
 4) Sign on a few minutes before your lesson time and add me GianGuitar to your contact list 
 <br />
 5) Lesson time! The lesson proceeds like normal from here, all handouts, song pdfs and backing tracks will be emailed to you.
+<br /><br />
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick" />
+<input type="hidden" name="hosted_button_id" value="T3HB5PT57ZV6S" />
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+</form>
+
 <br /><br />
 <h3>Video Series</h3>
 <br />
