--- a/lessons.html
+++ b/lessons.html
@@ -7,7 +7,7 @@ description: Guitar Lessons by Gian Solo
 <h2>Lessons</h2>
 
 Whether you are a beginner or intermediate, I got you! My classes are built for people yearning to learn how to play guitar. 
-<br />
+<br /><br />
 <h3>Skype</h3>
 <br />
 Skype Lessons allow you to get world class guitar instruction from the comfort of your own home. Here's what you need to get started:
@@ -33,7 +33,7 @@ Skype Lessons allow you to get world class guitar instruction from the comfort o
 <h3>Video Series</h3>
 <br />
 Video Lessons coming soon.
-<br />
+<br /><br />
 
 <h3>FAQ</h3>
 
@@ -41,7 +41,7 @@ Video Lessons coming soon.
 For starters, I'm unconventional. I did not like the normal studies offered and have instead taken it upon myself to create a curriculum that suits the needs of eccentric individuals and eager learners. 
 <br /><br />
 <h5>What are your rates?</h5>
-Rates vary,please inquiry through email or text.
+Rates vary, please inquire through email or text.
 <br /><br />
 <h5>How do I book Gian to teach me?</h5>
 Please head to the <a href="">contact page</a> and get in touch with Gian.
