--- a/lessons.html
+++ b/lessons.html
@@ -22,6 +22,48 @@ Skype Lessons allow you to get world class guitar instruction from the comfort o
 <br />
 5) Lesson time! The lesson proceeds like normal from here, all handouts, song pdfs and backing tracks will be emailed to you.
 <br /><br />
+<section>
+	<h4>Form</h4>
+	<form method="post" action="https://formspree.io/gtrsage@gmail.com">
+		<div class="row uniform">
+			<div class="6u 12u$(xsmall)">
+				<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+			</div>
+			<div class="6u$ 12u$(xsmall)">
+				<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
+			</div>
+			<div class="12u$">
+				<div class="select-wrapper">
+					<select name="demo-category" id="demo-category">
+						<option value="">- Category -</option>
+						<option value="1">General</option>
+						<option value="1">Advertising</option>
+						<option value="1">Lessons</option>
+						<option value="1">Other</option>
+					</select>
+				</div>
+			</div>
+			<div class="6u 12u$(small)">
+				<input type="checkbox" id="demo-copy" name="demo-copy">
+				<label for="demo-copy">Email me a copy</label>
+			</div>
+			<div class="6u$ 12u$(small)">
+				<input type="checkbox" id="demo-human" name="demo-human" checked>
+				<label for="demo-human">Not a robot</label>
+			</div>
+			<div class="12u$">
+				<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+			</div>
+			<div class="12u$">
+				<ul class="actions">
+					<li><input type="submit" value="Send Message" class="special" /></li>
+					<li><input type="reset" value="Reset" /></li>
+				</ul>
+			</div>
+		</div>
+	</form>
+</section>
+<br /><br />
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick" />
 <input type="hidden" name="hosted_button_id" value="T3HB5PT57ZV6S" />
