--- a/lessons.html
+++ b/lessons.html
@@ -23,7 +23,7 @@ Skype Lessons allow you to get world class guitar instruction from the comfort o
 5) Lesson time! The lesson proceeds like normal from here, all handouts, song pdfs and backing tracks will be emailed to you.
 <br /><br />
 <section>
-	<h4>Form</h4>
+	<h4>Order Form</h4>
 	<form method="post" action="https://formspree.io/gtrsage@gmail.com">
 		<div class="row uniform">
 			<div class="6u 12u$(xsmall)">
@@ -36,9 +36,9 @@ Skype Lessons allow you to get world class guitar instruction from the comfort o
 				<div class="select-wrapper">
 					<select name="demo-category" id="demo-category">
 						<option value="">- Category -</option>
-						<option value="1">General</option>
-						<option value="1">Advertising</option>
-						<option value="1">Lessons</option>
+						<option value="1">30 mins. - $50</option>
+						<option value="1">1 hr. - $100</option>
+						<option value="1">30 mins. - Consultation - $60</option>
 						<option value="1">Other</option>
 					</select>
 				</div>
@@ -52,7 +52,7 @@ Skype Lessons allow you to get world class guitar instruction from the comfort o
 				<label for="demo-human">Not a robot</label>
 			</div>
 			<div class="12u$">
-				<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+				<textarea name="demo-message" id="demo-message" placeholder="Tell me about yourself. What is your level of playing and what are your goals and interest on guitar" rows="6"></textarea>
 			</div>
 			<div class="12u$">
 				<ul class="actions">
