--- a/lessons.html
+++ b/lessons.html
@@ -6,19 +6,21 @@ description: Guitar Lessons by Gian Solo
 
 <h2>Lessons</h2>
 
-Whether you are a beginner or intermediate, I got you! My classes are built for people yearning to learn how to play guitar. 
+Whether you are a beginner or intermediate, I got you! My lessons are built for people yearning to learn how to play guitar and be one with the instrument. 
+Through my lessons, you will receive high-quality one-on-one, guided lessons and gain unparalleled knowledge in the art of playing the guitar. There's no
+better way to learn than with an instructor, make no mistake about it!
 <br /><br />
-<h3>Skype</h3>
+<h3>Skype Lessons</h3>
 <br />
-Skype Lessons allow you to get world class guitar instruction from the comfort of your own home. Here's what you need to get started:
+Skype lessons from the comfort of your own home. Here's what you'll need to get started:
 <br /><br />
 1) A computer with a webcam and an internet connection 
 <br />
 2) Download the free Skype online video chat service <a href="https://www.skype.com/en/">here</a>. Make sure to make an account! 
 <br />
-3) Contact me via email or phone and set up your first lesson. Once we've arranged a lesson time, confirm your lesson time by purchasing your first lesson using the button below. 
+3) Get in contact with me via contact form or gtrsage@gmail.com and tell me about yourself and your guitar goals. From there, we set up your first lesson. Once we've arranged a lesson time, confirm your lesson time by purchasing your first lesson using the button below. 
 <br />
-4) Sign on a few minutes before your lesson time and add me GianGuitar to your contact list 
+4) Sign on a few minutes before your lesson time and add me gtrsage to your contact list 
 <br />
 5) Lesson time! The lesson proceeds like normal from here, all handouts, song pdfs and backing tracks will be emailed to you.
 <br /><br />
@@ -77,6 +79,11 @@ Skype Lessons allow you to get world class guitar instruction from the comfort o
 Video Lessons coming soon.
 <br /><br />
 
+<h3>In-Person Lessons</h3>
+<br />
+Email me for rates and availability. Thanks!
+<br /><br />
+<hr>
 <h3>FAQ</h3>
 
 <h5>Why should I take lessons with you?</h5>
@@ -125,10 +132,10 @@ Remember future rock star, Rome was not built overnight. Learning how to play gu
 I'm a rocker by heart but also focus on pop, metal, folk, punk, funk, soul, oldies, classic rock and much more.
 
 
-Note: -Add Venmo, Paypal + Buttons + Drop Down prices
--Add Bookafy Calendar
--Add email
--Parking Instructions
+
+
+
+
 -Payment Info
 -Refund/Cancellation Policy
--Skype Info (PST)
+
