--- a/lessons.html
+++ b/lessons.html
@@ -66,6 +66,7 @@ Skype lessons from the comfort of your own home. Here's what you'll need to get 
 	</form>
 </section>
 <br /><br />
+<h4>Pay Button</h4>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick" />
 <input type="hidden" name="hosted_button_id" value="T3HB5PT57ZV6S" />
