--- a/lessons.html
+++ b/lessons.html
@@ -75,6 +75,17 @@ Skype lessons from the comfort of your own home. Here's what you'll need to get 
 </form>
 
 <br /><br />
+<h3>What You'll Learn</h3>
+<ul>
+	<li>Chords & Strumming Patterns & Power Chords</li>
+	<li>Fingerstyle Guitar</li>
+	<li>Proper Technique</li>
+	<li>Various Guitar Styles</li>
+	<li>Scales, Exercises & Dexterity</li>
+	<li>Song Composition</li>
+</ul>	
+Contact me today!
+<br /><br />
 <h3>Video Series</h3>
 <br />
 Video Lessons coming soon.
