--- a/lessons.html
+++ b/lessons.html
@@ -12,7 +12,19 @@ better way to learn than with an instructor, make no mistake about it!
 <br /><br />
 <h3>Skype Lessons</h3>
 <br />
-Skype lessons from the comfort of your own home. Here's what you'll need to get started:
+Skype lessons with me from the comfort of your own home. I mean, can we say win-win?  
+<br /><br />
+<h3>What You'll Learn</h3>
+<ul>
+	<li>Chords & Strumming Patterns & Power Chords</li>
+	<li>Fingerstyle Guitar</li>
+	<li>Proper Technique</li>
+	<li>Various Guitar Styles</li>
+	<li>Scales, Exercises & Dexterity</li>
+	<li>Song Composition</li>
+</ul>
+<br /><br />
+Here's what you'll need to get started:
 <br /><br />
 1) A computer with a webcam and an internet connection 
 <br />
@@ -74,16 +86,7 @@ Skype lessons from the comfort of your own home. Here's what you'll need to get 
 <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
 </form>
 
-<br /><br />
-<h3>What You'll Learn</h3>
-<ul>
-	<li>Chords & Strumming Patterns & Power Chords</li>
-	<li>Fingerstyle Guitar</li>
-	<li>Proper Technique</li>
-	<li>Various Guitar Styles</li>
-	<li>Scales, Exercises & Dexterity</li>
-	<li>Song Composition</li>
-</ul>	
+<br /><br />	
 Contact me today!
 <br /><br />
 <h3>Video Series</h3>
