--- a/lessons.html
+++ b/lessons.html
@@ -14,7 +14,7 @@ better way to learn than with an instructor, make no mistake about it!
 <br />
 Skype lessons with me from the comfort of your own home. I mean, can we say win-win?  
 <br /><br />
-<h3>What You'll Learn</h3>
+<h4>What You'll Learn</h4>
 <ul>
 	<li>Chords & Strumming Patterns & Power Chords</li>
 	<li>Fingerstyle Guitar</li>
@@ -85,9 +85,8 @@ Here's what you'll need to get started:
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
 </form>
-
-<br /><br />	
-Contact me today!
+	
+Contact me today and let's get you started on your guitar journey!
 <br /><br />
 <h3>Video Series</h3>
 <br />
