--- a/lessons.html
+++ b/lessons.html
@@ -10,7 +10,7 @@ Whether you are a beginner or intermediate, I got you! My lessons are built for 
 Through my lessons, you will receive high-quality one-on-one, guided lessons and gain unparalleled knowledge in the art of playing the guitar. There's no
 better way to learn than with an instructor, make no mistake about it!
 <br /><br />
-<h3>Skype Lessons</h3>
+<h3 style="color:#198DC6">Skype Lessons</h3>
 <br />
 Skype lessons with me from the comfort of your own home. I mean, can we say win-win?  
 <br /><br />
