--- a/lessons.html
+++ b/lessons.html
@@ -14,7 +14,7 @@ better way to learn than with an instructor, make no mistake about it!
 <br />
 Skype lessons with me from the comfort of your own home. I mean, can we say win-win?  
 <br /><br />
-<h4>What You'll Learn</h4>
+<h4 style="color:#72B6D8">What You'll Learn</h4>
 <ul>
 	<li>Chords & Strumming Patterns & Power Chords</li>
 	<li>Fingerstyle Guitar</li>
@@ -87,12 +87,12 @@ Here's what you'll need to get started:
 	
 Contact me today and let's get you started on your guitar journey!
 <br /><br />
-<h3>Video Series</h3>
+<h3 style="color:#198DC6">Video Series</h3>
 <br />
 Video Lessons coming soon.
 <br /><br />
 
-<h3>In-Person Lessons</h3>
+<h3 style="color:#198DC6">In-Person Lessons</h3>
 <br />
 Email me for rates and availability. Thanks!
 <br /><br />
