--- a/lessons.html
+++ b/lessons.html
@@ -14,7 +14,7 @@ better way to learn than with an instructor, make no mistake about it!
 <br />
 Skype lessons with me from the comfort of your own home. I mean, can we say win-win?  
 <br /><br />
-<h4 style="color:#37ABE5">What You'll Learn</h4>
+<h4 style="color:#1884BB">What You'll Learn</h4>
 <ul>
 	<li>Chords & Strumming Patterns & Power Chords</li>
 	<li>Fingerstyle Guitar</li>
