--- a/lessons.html
+++ b/lessons.html
@@ -36,7 +36,7 @@ Here's what you'll need to get started:
 5) Lesson time! The lesson proceeds like normal from here, all handouts, song pdfs and backing tracks will be emailed to you.
 <br /><br />
 <section>
-	<h4>Order Form</h4>
+	<h4 style="color:#1884BB">Order Form</h4>
 	<form method="post" action="https://formspree.io/gtrsage@gmail.com">
 		<div class="row uniform">
 			<div class="6u 12u$(xsmall)">
