--- a/lessons.html
+++ b/lessons.html
@@ -77,13 +77,35 @@ Here's what you'll need to get started:
 	</form>
 </section>
 <br /><br />
-<h4>Pay Button</h4>
+<h4 style="color:#198DC6">Pay Button</h4>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick" />
-<input type="hidden" name="hosted_button_id" value="T3HB5PT57ZV6S" />
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+<input type="hidden" name="cmd" value="_xclick">
+<input type="hidden" name="business" value="gtrsage@gmail.com">
+<input type="hidden" name="lc" value="US">
+<input type="hidden" name="item_name" value="Gian Guitar Lessons">
+<input type="hidden" name="button_subtype" value="services">
+<input type="hidden" name="no_note" value="0">
+<input type="hidden" name="currency_code" value="USD">
+<input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynowCC_LG.gif:NonHostedGuest">
+<table>
+<tr><td><input type="hidden" name="on0" value="Options">Options</td></tr><tr><td><select name="os0">
+	<option value="30 Mins. - Guitar Lesson">30 Mins. - Guitar Lesson $50.00 USD</option>
+	<option value="1 Hour - Guitar Lesson">1 Hour - Guitar Lesson $100.00 USD</option>
+	<option value="30 Mins. - Consultation">30 Mins. - Consultation $60.00 USD</option>
+</select> </td></tr>
+<tr><td><input type="hidden" name="on1" value="Full Name">Full Name</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+</table>
+<input type="hidden" name="option_select0" value="30 Mins. - Guitar Lesson">
+<input type="hidden" name="option_amount0" value="50.00">
+<input type="hidden" name="option_select1" value="1 Hour - Guitar Lesson">
+<input type="hidden" name="option_amount1" value="100.00">
+<input type="hidden" name="option_select2" value="30 Mins. - Consultation">
+<input type="hidden" name="option_amount2" value="60.00">
+<input type="hidden" name="option_index" value="0">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
+
 	
 Contact me today and let's get you started on your guitar journey!
 <br /><br />
