--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@ image:
 ---
 
 <section>
-	<h4>Form</h4>
+	<h4>CONTACT</h4>
 	<form method="post" action="https://formspree.io/gtrsage@gmail.com">
 		<div class="row uniform">
 			<div class="6u 12u$(xsmall)">
@@ -19,8 +19,9 @@ image:
 					<select name="demo-category" id="demo-category">
 						<option value="">- Category -</option>
 						<option value="1">General</option>
-						<option value="1">Advertising</option>
-						<option value="1">Lessons</option>
+						<option value="1">Guitar Lessons</option>
+						<option value="1">Sessions</option>
+						<option value="1">Media/Advertising</option>
 						<option value="1">Other</option>
 					</select>
 				</div>
@@ -45,5 +46,4 @@ image:
 		</div>
 	</form>
 </section>
-
 
