--- a/about.html
+++ b/about.html
@@ -6,13 +6,11 @@ image: alxstlsunsplash.jpg
 ---
 <h3>ABOUT</h3>
 <br />
-Privately trained to teach guitar. 
-<br />
 Over the years, I’ve built my reputation as an expert in music, arts and lifestyle trends. I provide great care in the work 
 that I do to help my patrons navigate through music information, unique arts and help curate their lifestyle. I am 100% 
-original and uphold my style, work quality and statement. I choose to work with investors, creators, companies, artists, 
-brands, songwriters, bands, musicians, entrepreneurs, labels, consumers, buyers, visionaries, collaborators, customers and 
-others that pursue the same coaction vision of quality, value, and substance.
+original and uphold my style, work quality and statement. I choose to work with brands, creators, investors, influencers, companies, artists, 
+ songwriters, bands, musicians, entrepreneurs, labels, consumers, buyers, visionaries, collaborators, customers and 
+others that pursue the same coaction vision of quality, influence, value, and substance.
 <br /><br />
 For more info regarding the services I provide: 
 <a href="mailto:gtrsage@gmail.com"> gtrsage@gmail.com</a>
