--- a/faq.html
+++ b/faq.html
@@ -1,3 +1,9 @@
+---
+layout: page
+title: FAQ
+description: FAQ Gian Solo
+image: alxstlsunsplash.jpg
+---
 <h2>Accordion</h2>
 
 <button class="accordion">Section 1</button>
