--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@ image: alxstlsunsplash.jpg
 ---
 <h3>Accordion</h3>
 
-<button class="accordion">Section 1</button>
+<button class="accordion">Why should I take lessons with you?</button>
 <div class="panel">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
