--- a/faq.html
+++ b/faq.html
@@ -4,21 +4,87 @@ title: FAQ
 description: FAQ Gian Solo
 image: alxstlsunsplash.jpg
 ---
-<h3>Accordion</h3>
+<h1>FAQ</h1>
+
+<h3>Lessons</h3>
 
 <button class="accordion">Why should I take lessons with you?</button>
 <div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>For starters, I'm unconventional. I do not dig the normal studies that other teachers offer and have instead taken it upon myself to create a curriculum that suits the needs of eccentric individuals and eager learners. </p>
 </div>
 
-<button class="accordion">Section 2</button>
+<button class="accordion">WHAT ARE YOUR RATES?</button>
 <div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>Rates vary, please inquire through email or text. </p>
 </div>
 
-<button class="accordion">Section 3</button>
+<button class="accordion">HOW DO I BOOK GIAN TO TEACH ME?</button>
 <div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>Please head to the contact page and get in touch with Gian.</p>
+</div>
+
+<button class="accordion">HOW LONG ARE THE SESSIONS?</button>
+<div class="panel">
+  <p>Sessions last anywhere between 30 mins. to 1 hr. </p>
+</div>
+
+<button class="accordion">WHEN DO YOU TEACH?</button>
+<div class="panel">
+  <p>Depends on availability of student but I prefer Saturday & Sunday mornings.</p>
+</div>
+
+<button class="accordion">WHERE ARE THE LESSONS HELD?</button>
+<div class="panel">
+  <p>I teach in two ways: Skype Lessons or Private Lesson. For Private Lessons, I teach at my home, in my special mancave (garage) wannabe studio. You'll love it! </p>
+</div>
+
+<button class="accordion">DO YOU OFFER A VIDEO CURRICULUM/LESSON?
+</button>
+<div class="panel">
+  <p>Video curriculum/lessons coming soon. Stay tuned! 
+</p>
+</div>
+
+<button class="accordion">DO YOU DO IN-HOME LESSONS OR GROUP LESSONS?
+</button>
+<div class="panel">
+  <p>I prefer to teach in the comfort of my home but I can def. consider different circumstances. Group lessons all good!</p>
+</div>
+
+<button class="accordion">WILL I LEARN THE SAME THINGS IF I TAKE SKYPE LESSONS INSTEAD OF IN-PERSON?
+</button>
+<div class="panel">
+  <p>If you ask me, it really all depends on how the student wants to learn. We all learn in different ways. Location is also a huge factor in deciding whether the student wants to learn through Skype or in-person. </p>
+</div>
+
+<button class="accordion">I HAVE A UNIQUE SCHEDULE. CAN WE WORK AROUND IT?</button>
+<div class="panel">
+  <p>As I mention above, I am def. willing to consider options. My main concern is the clarity of the lesson. Late nights, no rest, no sleep, or teaching at odd hours is not beneficial for anyone.</p>
+</div>
+
+<button class="accordion">WHAT IS THE AGE RANGE?</button>
+<div class="panel">
+  <p>10 and up. </p>
+</div>
+
+<button class="accordion">DO YOU OFFER GIFT CERTIFICATES?</button>
+<div class="panel">
+  <p>Gift Certicates coming soon. </p>
+</div>
+
+<button class="accordion">HOW MANY LESSONS IN A WEEK?</button>
+<div class="panel">
+  <p>1 lesson per week. </p>
+</div>
+
+<button class="accordion">HOW LONG UNTIL I START TO ROCK?</button>
+<div class="panel">
+  <p>Remember future rock star, Rome was not built overnight. Learning how to play guitar cannot be learned overnight. Practice always and never stop learning. </p>
+</div>
+
+<button class="accordion">WHAT IS YOUR MUSICAL FOCUS?</button>
+<div class="panel">
+  <p>I'm a rocker by heart but also focus on pop, metal, folk, punk, funk, soul, oldies, classic rock and much more.</p>
 </div>
 
 <script>
