--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@ title: FAQ
 description: FAQ Gian Solo
 image: alxstlsunsplash.jpg
 ---
-<h1>FAQ</h1>
+<h2>FAQ</h2>
 
 <h3>Lessons</h3>
 
@@ -38,21 +38,18 @@ image: alxstlsunsplash.jpg
   <p>I teach in two ways: Skype Lessons or Private Lesson. For Private Lessons, I teach at my home, in my special mancave (garage) wannabe studio. You'll love it! </p>
 </div>
 
-<button class="accordion">DO YOU OFFER A VIDEO CURRICULUM/LESSON?
-</button>
+<button class="accordion">DO YOU OFFER A VIDEO CURRICULUM/LESSON?</button>
 <div class="panel">
   <p>Video curriculum/lessons coming soon. Stay tuned! 
 </p>
 </div>
 
-<button class="accordion">DO YOU DO IN-HOME LESSONS OR GROUP LESSONS?
-</button>
+<button class="accordion">DO YOU DO IN-HOME LESSONS OR GROUP LESSONS?</button>
 <div class="panel">
   <p>I prefer to teach in the comfort of my home but I can def. consider different circumstances. Group lessons all good!</p>
 </div>
 
-<button class="accordion">WILL I LEARN THE SAME THINGS IF I TAKE SKYPE LESSONS INSTEAD OF IN-PERSON?
-</button>
+<button class="accordion">WILL I LEARN THE SAME THINGS IF I TAKE SKYPE LESSONS INSTEAD OF IN-PERSON?</button>
 <div class="panel">
   <p>If you ask me, it really all depends on how the student wants to learn. We all learn in different ways. Location is also a huge factor in deciding whether the student wants to learn through Skype or in-person. </p>
 </div>
@@ -86,6 +83,10 @@ image: alxstlsunsplash.jpg
 <div class="panel">
   <p>I'm a rocker by heart but also focus on pop, metal, folk, punk, funk, soul, oldies, classic rock and much more.</p>
 </div>
+
+<h3>SESSIONS</h3>
+<h3>WRITER</h3>
+<h3>DEVELOPER</h3>
 
 <script>
 var acc = document.getElementsByClassName("accordion");
