--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: About
 description: About Gian Solo
-image: alxstlsunsplash.jpg
+image: IMG_0533.JPG
 ---
 <h3>ABOUT</h3>
 <br />
