--- a/lessons.html
+++ b/lessons.html
@@ -1,7 +1,8 @@
 ---
 layout: page
-title: Guitar Lessons
-description: Guitar Lessons by Gian Solo
+title: Lessons
+description: Guitar Development by Gian Solo
+image: IMG_0533.JPG
 ---
 
 <h2>Lessons</h2>
