--- a/lessons.html
+++ b/lessons.html
@@ -2,7 +2,7 @@
 layout: page
 title: Lessons
 description: Guitar Development by Gian Solo
-image: IMG_0533.JPG
+image: banner.jpg
 ---
 
 <h2>Lessons</h2>
