--- a/lessons.html
+++ b/lessons.html
@@ -118,5 +118,5 @@ Video Lessons coming soon.
 <h3 style="color:#198DC6">In-Person Lessons</h3>
 <br />
 Email me for rates and availability. Thanks!
-
-
+<br /><br />
+Do you have more inquiries regarding Gian's guitar lesson? Check out more information on the <a href="https://gianguitar.github.io/giansolo/faq/">FAQ page</a> or Email gtrsage@gmail.com.
