--- a/faq.html
+++ b/faq.html
@@ -1,12 +1,14 @@
 ---
 layout: page
-title: FAQ
-description: FAQ Gian Solo
+title: FAQ/Policy
+description: FAQ/Policy Gian Solo
 image: home.JPG
 ---
-<h2>FAQ</h2>
+<h2>FAQ/Policy</h2>
 
-<h3>Lessons</h3>
+<h3 style="color: #1844BB">POLICY</h3>
+
+<h3 style="color: #1844BB">LESSONS</h3>
 
 <button class="accordion">Why should I take lessons with you?</button>
 <div class="panel">
@@ -84,9 +86,8 @@ image: home.JPG
   <p>I'm a rocker by heart but also focus on pop, metal, folk, punk, funk, soul, oldies, classic rock and much more.</p>
 </div>
 
-<h3>SESSIONS</h3>
-<h3>WRITER</h3>
-<h3>DEVELOPER</h3>
+<h3 style="color: #1844BB">SESSIONS</h3>
+
 
 <script>
 var acc = document.getElementsByClassName("accordion");
