--- a/faq.html
+++ b/faq.html
@@ -6,9 +6,9 @@ image: home.JPG
 ---
 <h2>FAQ/Policy</h2>
 
-<h3 style="color: #1844BB">POLICY</h3>
+<h3 style="color: #18844BB">POLICY</h3>
 
-<h3 style="color: #1844BB">LESSONS</h3>
+<h3 style="color: #18844BB">LESSONS</h3>
 
 <button class="accordion">Why should I take lessons with you?</button>
 <div class="panel">
@@ -86,7 +86,7 @@ image: home.JPG
   <p>I'm a rocker by heart but also focus on pop, metal, folk, punk, funk, soul, oldies, classic rock and much more.</p>
 </div>
 
-<h3 style="color: #1844BB">SESSIONS</h3>
+<h3 style="color: #18844BB">SESSIONS</h3>
 
 
 <script>
