--- a/faq.html
+++ b/faq.html
@@ -8,6 +8,33 @@ image: home.JPG
 
 <h3 style="color: #1884BB">POLICY</h3>
 
+<button class="accordion">PAYMENT AND PRE-PAYMENTS</button>
+<div class="panel">
+  <p>Lessons are sold in blocks of 2 lessons. The 1st session will lean on seeing if the student is a fit with the instructor 
+    and vice versa. All lessons are charged prior to the lesson. Purchased lessons expire 4 months from the date of purchase. </p>
+</div>
+
+<button class="accordion">STUDENT PROMISE</button>
+<div class="panel">
+  <p>The student will promise to practice at their scheduled practice time and not divert or waiver from the rule. The student is 
+  expected to follow and practice correctly and accurately for maximum learning. The proposed practice time is 45 mins. Practice 
+  should be 2-4 times a week to maximize learning and see results in less time. Practice is key to learning how to play the guitar 
+  progress beyond your wildest guitar dreams so don't pay for lessons if this is not the standard that you are hoping to achive.</p>
+</div>
+
+<button class="accordion">LAST MINUTE SKYPE LESSON, SESSION & CONSULTATION CANCELLATION</button>
+<div class="panel">
+  <p>All Skype lessons, sessions and consultations are subject to a 48-hour cancellation policy. If you cannot make it to your 
+  scheduled lesson, session or consultation, you must provide a 48-hour cancellation notice prior or get in contact to reschedule for another time. 
+  No notice of cancellation results in a full charge as a no-show fee and services rendered. There are no exceptions to this rule. Being late
+  to the lesson also does not guarantee you extra time at the end of your scheduled time, not unless deemed necessary by the instructor.</p>
+</div>
+
+<button class="accordion">HOW LONG ARE THE SESSIONS?</button>
+<div class="panel">
+  <p>Sessions last anywhere between 30 mins. to 1 hr. </p>
+</div>
+
 <h3 style="color: #1884BB">LESSONS</h3>
 
 <button class="accordion">Why should I take lessons with you?</button>
