--- a/faq.html
+++ b/faq.html
@@ -30,7 +30,7 @@ image: home.JPG
   to the lesson also does not guarantee you extra time at the end of your scheduled time, not unless deemed necessary by the instructor.</p>
 </div>
 <br /><br />
-<h3 style="color: #1884BB">LESSONS</h3>
+<h3 style="color: #1884BB">FAQ</h3>
 
 <button class="accordion">Why should I take lessons with you?</button>
 <div class="panel">
