--- a/faq.html
+++ b/faq.html
@@ -10,8 +10,9 @@ image: home.JPG
 
 <button class="accordion">PAYMENT AND PRE-PAYMENTS</button>
 <div class="panel">
-  <p>Lessons are sold in blocks of 2 lessons. The 1st session will lean on seeing if the student is a fit with the instructor 
-    and vice versa. All lessons are charged prior to the lesson. Purchased lessons expire 4 months from the date of purchase. </p>
+  <p>Lessons are sold in blocks of 2 lessons. In the 1st session, the student and instructor meet and greet and decide and that end of 
+    discussions whether its a good fit for both and move forward. All lessons are charged prior to the lesson. Purchased lessons 
+    expire 4 months from the date of purchase unless plans have been made with instructor prior expiration. </p>
 </div>
 
 <button class="accordion">STUDENT PROMISE</button>
