--- a/about.html
+++ b/about.html
@@ -6,11 +6,16 @@ image: IMG_E1216.JPG
 ---
 <h3>ABOUT</h3>
 <br />
-Over the years, I’ve built my reputation as an expert in music, arts and lifestyle trends. I provide great care in the work 
-that I do to help my patrons navigate through music information, unique arts and help curate their lifestyle. I am 100% 
-original and uphold my style, work quality and statement. I choose to work with brands, creators, investors, influencers, companies, artists, 
- songwriters, bands, musicians, entrepreneurs, labels, consumers, buyers, visionaries, collaborators, customers and 
-others that pursue the same coaction vision of quality, influence, value, and substance.
+Over the years, I’ve built my reputation as an expert in music, arts and lifestyle trends but most especially, an expert on the art of guitar. 
+I provide great care in making sure you learn the art of learing how to play guitar in the most efficient and effective manner. Learning how to 
+play guitar brings endless joy and 
+
+I am 100% original and uphold my style, work quality and statement.
+
+I teach from the heart and soul and wouldn't do it any other way. Learning how to play the guitar is a life-long journey and I'm here
+to guide you through these exciting and adventurous times! I've tweaked things, focused on this, got rid of that and created a method that
+will basically guide you into becoming a full-fledged master guitarist. Sounds amazing right? It can be you.
+
 <br /><br />
 For more info regarding the services I provide: 
 <a href="mailto:gtrsage@gmail.com"> gtrsage@gmail.com</a>
