--- a/about.html
+++ b/about.html
@@ -6,15 +6,17 @@ image: IMG_E1216.JPG
 ---
 <h3>ABOUT</h3>
 <br />
-Over the years, I’ve built my reputation as an expert in music, arts and lifestyle trends but most especially, an expert on the art of guitar. 
-I provide great care in making sure you learn the art of learing how to play guitar in the most efficient and effective manner. Learning how to 
-play guitar brings endless joy and 
+Over the span of 26 years, I’ve built my reputation as an expert on the art of guitar. After years of touring, recording and mentoring,
+I've decided to expand my method to help students understand the art of learning how to play guitar. I provide great care in making sure 
+you learn how to play guitar in the most efficient and effective manner. 
 
 I am 100% original and uphold my style, work quality and statement.
 
 I teach from the heart and soul and wouldn't do it any other way. Learning how to play the guitar is a life-long journey and I'm here
 to guide you through these exciting and adventurous times! I've tweaked things, focused on this, got rid of that and created a method that
-will basically guide you into becoming a full-fledged master guitarist. Sounds amazing right? It can be you.
+will basically guide you into becoming a full-fledged master guitarist while having fun doing it. Sounds amazing right? It can be you.
+
+Sign up today and let me be your guide on your learning how to play guitar journey!
 
 <br /><br />
 For more info regarding the services I provide: 
