--- a/about.html
+++ b/about.html
@@ -18,7 +18,46 @@ will basically guide you into becoming a full-fledged master guitarist while hav
 <br /><br />
 Sign up today and let me be your guide on your learning how to play guitar journey!
 <br /><br />
-
+<h4>CONTACT</h4>
+	<form method="post" action="https://formspree.io/gtrsage@gmail.com">
+		<div class="row uniform">
+			<div class="6u 12u$(xsmall)">
+				<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+			</div>
+			<div class="6u$ 12u$(xsmall)">
+				<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
+			</div>
+			<div class="12u$">
+				<div class="select-wrapper">
+					<select name="demo-category" id="demo-category">
+						<option value="">- Category -</option>
+						<option value="1">General</option>
+						<option value="1">Guitar Lessons</option>
+						<option value="1">Sessions</option>
+						<option value="1">Media/Advertising</option>
+						<option value="1">Other</option>
+					</select>
+				</div>
+			</div>
+			<div class="6u 12u$(small)">
+				<input type="checkbox" id="demo-copy" name="demo-copy">
+				<label for="demo-copy">Email me a copy</label>
+			</div>
+			<div class="6u$ 12u$(small)">
+				<input type="checkbox" id="demo-human" name="demo-human" checked>
+				<label for="demo-human">Not a robot</label>
+			</div>
+			<div class="12u$">
+				<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+			</div>
+			<div class="12u$">
+				<ul class="actions">
+					<li><input type="submit" value="Send Message" class="special" /></li>
+					<li><input type="reset" value="Reset" /></li>
+				</ul>
+			</div>
+		</div>
+	</form>
 <br /><br />
 For more info regarding the services I provide: 
 <a href="mailto:gtrsage@gmail.com"> gtrsage@gmail.com</a>
