--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,9 @@ image: IMG_E0647.JPG
 ---
 
 <section>
-	<h4>CONTACT</h4>
+	<h2>CONTACT</h2>
+	Get in contact with Gian today.
+	<br /><br />
 	<form method="post" action="https://formspree.io/gtrsage@gmail.com">
 		<div class="row uniform">
 			<div class="6u 12u$(xsmall)">
