--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ image: IMG_E1216.JPG
 ---
 <h3>ABOUT</h3>
 <br />
-Over the span of 26 years, I’ve built my reputation as an expert on the art of guitar. After years of touring, recording and mentoring,
+Over the span of 26 years, I’ve built my reputation as an expert on the art of guitar. After years of touring, recording, performing, consulting and mentoring,
 I've decided to expand my method to help students understand the art of learning how to play guitar. I provide great care in making sure 
 you learn how to play guitar in the most efficient and effective manner. 
 <br /><br />
