--- a/consultations.html
+++ b/consultations.html
@@ -1,7 +1,26 @@
 ---
-type: default
-
+layout: page
+title: consultations
+image: banner.jpg
 ---
 
-Gian's guitar lessons are rooted in the styles and sounds of rock, acoustic, pop, rap, hip-hop, metal, soul, folk, classic rock, funk and more, 
-Gian is the well-rounded guitar player that can help you kick it up a notch.
+<h2>CONSULTATIONS</h2>
+
+Is there something you'd like to ask? Do you need advice? Need a guitar specialist? Is there something you'd like to know? Is there something you'd like explained or demystified, 
+regarding any aspect of the guitar? Is there a burning question tht you wish an expert would not only answer but actually go 
+into detail when it comes to guitar? Need some guitar improvement? Development? Consult with Gian today.
+
+<h5>SPECIALIZED IN:</h5>
+<ul>
+  <li>
+<li>Professional Opinion</li>
+<li>Knowledgeable</li>
+<li>Experienced</li>
+<li>Expert Advice</li>
+<li>Out of the Box</li>
+<li>Strategic</li>
+<li>Decision </li>
+<li>Specialist</li>
+  </li>
+</ul>  
+
