--- a/consultations.html
+++ b/consultations.html
@@ -5,14 +5,26 @@ image: banner.jpg
 ---
 
 <h2>CONSULTATIONS</h2>
+  
+Helping is second nature for me and I'd love to lend a hand in helping you crush your goals! I'm also available to give advice, direction and 
+instruction to all guitarists and musicians seeking clarity. With my experience and knowledge, 
 
-Is there something you'd like to ask? Do you need advice? Need a guitar specialist? Is there something you'd like to know? Is there something you'd like explained or demystified, 
+Need to talk music or guitar with an expert? Is there something you'd like to ask? Do you need advice? Need a guitar specialist? Is there something you'd like to know? Is there something you'd like explained or demystified, 
 regarding any aspect of the guitar? Is there a burning question tht you wish an expert would not only answer but actually go 
-into detail when it comes to guitar? Need some guitar improvement? Development? Consult with Gian today.
+into detail when it comes to guitar? Need some guitar improvement help? Development? Consult with Gian today.
 
-<h5>SPECIALIZED IN:</h5>
+
+<br /><br />
+<h5>TOPIC EXAMPLES:</h5>
 <ul>
-  <li>
+  <li>Developing your own style</li>
+  <li>Conquering band situations</li>
+  <li>Kicking it up a notch during live performances</li>
+  <li>Finding the guitar tone that you hear in your head</li>
+  <li>How to sing while playing guitar</li>
+  <li>The correct way to practice and why</li>
+  <li>Choosing the correct songs that cater to your musical strengths</li>
+  
 <li>Professional Opinion</li>
 <li>Knowledgeable</li>
 <li>Experienced</li>
@@ -21,6 +33,5 @@ into detail when it comes to guitar? Need some guitar improvement? Development? 
 <li>Strategic</li>
 <li>Decision </li>
 <li>Specialist</li>
-  </li>
 </ul>  
 
