--- a/consultations.html
+++ b/consultations.html
@@ -6,8 +6,8 @@ image: banner.jpg
 
 <h2>CONSULTATIONS</h2>
   
-Helping is second nature for me and I'd love to lend a hand in helping you crush your goals! I'm also available to give advice, direction and 
-instruction to all guitarists and musicians seeking clarity. With my experience and knowledge, 
+I'd love to lend a hand or an ear in helping you reach your goals. I'm available to give expert advice, professional direction and 
+actionable instruction to all guitarists and musicians seeking clarity. With my experience and knowledge, 
 
 Need to talk music or guitar with an expert? Is there something you'd like to ask? Do you need advice? Need a guitar specialist? Is there something you'd like to know? Is there something you'd like explained or demystified, 
 regarding any aspect of the guitar? Is there a burning question tht you wish an expert would not only answer but actually go 
