--- a/consultations.html
+++ b/consultations.html
@@ -6,9 +6,9 @@ image: banner.jpg
 
 <h2>CONSULTATIONS</h2>
   
-I'd love to lend a hand or an ear in helping you reach your goals. I'm available to give expert advice, professional direction and 
-actionable instruction to all guitarists and musicians seeking clarity. With my experience and knowledge, 
-
+I'm available to give expert advice, professional direction and actionable instruction to all guitarists and musicians seeking 
+direction or clarity. With my experience, knowledge and proven  I'd love to lend a hand or an ear in helping you reach your goals. 
+<br /><br />
 Need to talk music or guitar with an expert? Is there something you'd like to ask? Do you need advice? Need a guitar specialist? Is there something you'd like to know? Is there something you'd like explained or demystified, 
 regarding any aspect of the guitar? Is there a burning question tht you wish an expert would not only answer but actually go 
 into detail when it comes to guitar? Need some guitar improvement help? Development? Consult with Gian today.
